@@ -48,6 +48,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - nfgaloisconj(deg 2 pol) now return the identity as the second automorphism
     to follow nfroots and nfgaloisconj for higher degree.
   - rnfkummer: removed "all" flag, use bnrclassfield !
+  - remove zetamultinit and corresponding optional argument in zetamult
 
 * Specific to the PARI library:
 ===============================
