@@ -555,7 +555,6 @@ A finite field is encoded by any element (\typ{FFELT}).\hfil\break
 \li{Riemann's zeta $\zeta(s)=\sum n^{-s}$}{zeta$(s)$}
 \li{Hurwitz's $\zeta(s,x)=\sum (n+x)^{-s}$}{zetahurwitz$(s,x)$}
 \li{multiple zeta value (MZV), $\zeta(s_1,\dots,s_k)$}{zetamult$(s,\{T\})$}
-\li{... init $T$ for MZV with $s_1+\dots+s_k\leq w$}{zetamultinit$(w)$}
 \li{all MZVs for weight $\sum s_i = n$}{zetamultall$(n)$}
 \li{convert MZV id to $[s_1,\dots,s_k]$}{zetamultconvert$(f,\{\fl\})$}
 \li{MZV dual sequence}{zetamultdual$(s)$}
