@@ -5310,12 +5310,9 @@ GEN     polylogmult_interpolate(GEN avec, GEN zvec, GEN t, long prec);
 GEN     zetamult(GEN avec, long prec);
 GEN     zetamultdual(GEN s);
 GEN     zetamult_interpolate2(GEN avec, GEN t, long prec);
-GEN     zetamult_zagier(GEN avec, long prec);
-GEN     zetamult0(GEN avec, GEN T, long prec);
-GEN     zetamult_interpolate(GEN avec, GEN t, GEN T, long prec);
+GEN     zetamult_interpolate(GEN avec, GEN t, long prec);
 GEN     zetamultall(long k, long flag, long prec);
 GEN     zetamultconvert(GEN a, long fl);
-GEN     zetamultinit(long k, long prec);
 
 /* level1.h */
 
