@@ -20,16 +20,6 @@
 147616399519802070423809304821760000000.000000000000000000
 261511308733300555880003612050037145600000000.000000000000
 702503058876439949271571303122255784968192000000000.000000
-360.000000000000000000000000000000000000000000000000000000
-1814400.00000000000000000000000000000000000000000000000000
-43589145600.0000000000000000000000000000000000000000000000
-3201186852864000.00000000000000000000000000000000000000000
-562000363888803840000.000000000000000000000000000000000000
-201645730563302817792000000.000000000000000000000000000000
-132626429906095529318154240000000.000000000000000000000000
-147616399519802070423809304821760000000.000000000000000000
-261511308733300555880003612050037145600000000.000000000000
-702503058876439949271571303122255784968192000000000.000000
 [3360, 46830, -6615, 210, -2]~
 [48, 2667, -299, 3, 0]~
 [480, -13650, 1455, -8, 0]~
@@ -218,4 +208,4 @@ Vecsmall([3, 1, 3, 1])
   ***   at top-level: polylogmult([2],[])
   ***                 ^-------------------
   *** polylogmult: incorrect type in polylogmult [#avec != #zvec] (t_VEC).
-Total time spent: 86
+Total time spent: 69
